# Dais-Scantree

./: README.md  pyproject.toml
.github/workflows/: publish.yml
src/dais_scantree/: __init__.py  bfs.py  dfs.py  ignore_rule.py
tests/: conftest.py  test_bfs.py  test_bfs_gitignore_behavior.py  test_dfs.py  test_dfs_gitignore_behavior.py  test_ignore_rule.py
