[project]
name = "dais-scantree"
version = "0.2.2"
description = "An LLM agent friendly file scanner"
readme = "README.md"
authors = [{ name = "BHznJNs", email = "bhznjns@outlook.com" }]
requires-python = ">=3.14"
dependencies = ["pathspec==1.0.4"]

[dependency-groups]
test = ["pytest"]

[build-system]
requires = ["uv_build>=0.9.28,<0.10.0"]
build-backend = "uv_build"
